<?xml version="1.0" encoding="utf-8"?>
<layout>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".View.MenuActivity">

        <Button
            android:id="@+id/button_withdraw"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:layout_marginStart="4dp"
            android:text="@string/bank_withdraw"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.299" />


        <Button
            android:id="@+id/button_check"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:text="@string/menu_check_money"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button_withdraw"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.299" />

        <Button
            android:id="@+id/button_payments"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:layout_marginStart="4dp"
            android:text="@string/menu_payments"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.437" />

        <Button
            android:id="@+id/button_transfer"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:text="@string/menu_transfer"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button_payments"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.437" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>